week3-kubernetes-sre-platform/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-demo-app
  namespace: sre-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre-demo-app
  template:
    metadata:
      labels:
        app: sre-demo-app
    spec:
      containers:
        - name: sre-demo-app
          image: talinpraketa/sre-demo-app:dev
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readyz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
