week3-kubernetes-sre-platform/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-demo-service
  namespace: sre-demo
  labels:
    app: sre-demo-app  
spec:
  selector:
    app: sre-demo-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
